# Tic-Tac-Toe

./: CMakeLists.txt  README.md  game.cpp
libs/score/: CMakeLists.txt  score.cpp  score.h
src/: game.cpp
